@@ -73,6 +73,8 @@
 	- skip EACCESS returns from stat(2) on mount points (#220991).
 	- permit files with glob characters in *.rpm packages (#142771,#147383).
 	- gendiff: permit $DIFF override, add -p to default diff. (#146981).
+	- rpmio: use HEAD for servers that don't support PROPFIND (#206066).
+	- rpmio: add RPMURL_SERVER_* server capability flags.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
